commit Julia's changes

--- a/public/FindYourPlace/src/FindYourPlace/scripts/app.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/app.html
@@ -1,12 +1,16 @@
-﻿<div>Header</div>
-<h1>Find your place</h1>
-
+﻿
 <nav>
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/page2" routerLinkActive="active">Page2</a>
+    <a routerLink="/home" routerLinkActive="active">Findyourplace</a>
+    <div id="right">
+        <a routerLink="/about" routerLinkActive="active">about</a>
+        <a routerLink="/contact" routerLinkActive="active">contact</a>
+    </div>
 </nav>
+<div class="container">
+    
 
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
-<div>footer</div>
+</div>
+
