--- a/public/FindYourPlace/src/FindYourPlace/scripts/home.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/home.html
@@ -1,1 +1,11 @@
-﻿<p>Home</p>
+﻿<section>
+    <div id="homePic"></div>
+    <h1>Find your place.</h1>
+    <h2>Enter a few details, and we'll show you the best places to live.</h2>
+    <div class="row">
+        <div class="col-lg-2 col-lg-offset-5">
+            <button class="btn btn-info" (click)="goToStart">Start</button>
+        </div>
+    </div>
+    
+</section>
