add api service

--- a/public/FindYourPlace/src/FindYourPlace/scripts/index.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/index.html
@@ -16,7 +16,7 @@
     <script src="libs/zone.js/dist/zone.js"></script>
     <script src="libs/reflect-metadata/Reflect.js"></script>
     <script src="libs/systemjs/dist/system.src.js"></script>
-    <!--<script src="libs/bootstrap/dist/js/bootstrap.js"></script>-->
+    <script src="libs/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- 3. Configure SystemJS -->
     <script src="app/systemjs.config.js"></script>
