bootstrap js requires jquery

--- a/public/FindYourPlace/src/FindYourPlace/scripts/index.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/index.html
@@ -10,8 +10,9 @@
     <!-- 1. Load css-->
     <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/libs/css/Main.min.css" rel="stylesheet" />
+    
     <!-- 2. Load libraries -->
-
+    <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/es6-shim/es6-shim.min.js"></script>
     <script src="libs/zone.js/dist/zone.js"></script>
     <script src="libs/reflect-metadata/Reflect.js"></script>
