add a number of providers so ng can how to inject

--- a/public/FindYourPlace/src/FindYourPlace/scripts/app.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/app.html
@@ -4,13 +4,9 @@
     <div id="right">
         <a routerLink="/about" routerLinkActive="active">about</a>
         <a routerLink="/contact" routerLinkActive="active">contact</a>
+        <a routerLink="/safety" routerLinkActive="active">safety map</a>
     </div>
 </nav>
 <div class="container">
-    
-
-
     <router-outlet></router-outlet>
-
 </div>
-
