fixed up css, added a few new pages...

--- a/public/FindYourPlace/src/FindYourPlace/scripts/index.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/index.html
@@ -28,6 +28,11 @@
 
 </head>
 <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+        <div class="home" id="homePic">
+            <div id="overlay">
+        </div>
+    </div>
+</my-app>
 </body>
 </html>
