--- a/public/FindYourPlace/src/FindYourPlace/scripts/safety/safety.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/safety/safety.html
@@ -1,5 +1,5 @@
-<section>
-    <div class="safety-wrapper"></div>
+<div class="container">
+    <div id="blueScreen" class="safety-wrapper"></div>
     <h1>Safety map.</h1>
     
     <div class="row">
@@ -10,4 +10,4 @@
             </button>
         </div>
     </div>
-</section>
+</div>
