--- a/public/FindYourPlace/src/FindYourPlace/scripts/safety/safety.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/safety/safety.html
@@ -4,10 +4,12 @@
     
     <div class="row">
         <div class="col-lg-2 col-lg-offset-5">
-            <button 
-            	class="btn btn-info" 
-            	(click)="goToStart">Start
-            </button>
+            <ul class="heroes">
+              <li *ngFor="let crime of crimeData"
+                (click)="onSelect(crime)">
+                <span class="">{{crime.id}}</span> {{crime.incidentRate}}
+              </li>
+            </ul>
         </div>
     </div>
 </div>
