check in api service testing

--- a/public/FindYourPlace/src/FindYourPlace/scripts/app.html
+++ b/public/FindYourPlace/src/FindYourPlace/scripts/app.html
@@ -5,7 +5,7 @@
             <a routerLink="/about" routerLinkActive="active">about</a>
             <a routerLink="/contact" routerLinkActive="active">contact</a>
             <a routerLink="/results" routerLinkActive="active">results</a>
-            <!--<a routerLink="/safety" routerLinkActive="active">safety map</a>-->
+            <a routerLink="/safety" routerLinkActive="active">safety map</a>
         </div>
     </nav>
     <router-outlet></router-outlet>
